Refactor and enhance project: add Makefile targets, improve config, update .gitignore, and strengthen database and route handling
- Added and fixed Makefile targets for MongoDB and linting
- Improved configuration structs and DSN handling for MongoDB and PostgreSQL
- Updated .gitignore for binaries, keys, coverage, env, and editor files
- Enhanced database client interfaces and repository abstractions
- Added comments and recommendations for production readiness in routes
- General code cleanup and best practice improvements

Signed-off-by: haguru <marc.p.fuller@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 *.dll
 *.so
 *.dylib
+sasuke
+
+# private key files
+*.pem
 
 # Test binary, built with `go test -c`
 *.test
@@ -29,4 +33,4 @@ go.work.sum
 
 # Editor/IDE
 # .idea/
-# .vscode/
+.vscode/
