--- a/.github/workflows/reviewdog.yaml
+++ b/.github/workflows/reviewdog.yaml
@@ -2,19 +2,32 @@ name: reviewdog
 on: [pull_request]
 env:
   REVIEWDOG_FAIL_ON_ERROR: 'true'
-  HADOLINT_VERSION: v1.16.3
 jobs:
-  bandit:
+  reviewdog:
     name: runner / reviewdog
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - run: gofmt -w -s .
+      - uses: reviewdog/action-suggester@v1.21.0
+        with:
+          tool_name: gofmt
+
+      - name: yamllint
+        uses: reviewdog/action-yamllint@v1.21.0
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review # Change reporter.
+
       - name: golangci-lint
         uses: reviewdog/action-golangci-lint@v2.8.0
         with:
           go_version: "1.24.2"
           golangci_lint_flags: "--config=.golangci.yml"
+
       - name: hadolint
-        uses: reviewdog/action-hadolint@fc7ee4a9f71e521bc43e370819247b70e5327540 # v1.50.2
+        uses: reviewdog/action-hadolint@v1.50.2
         with:
           reporter: github-pr-review # Default is github-pr-check
+      
