Add and improve config package tests
- Added TestMain to set up and clean up an invalid YAML file for testing error handling
- Added tests for ReadLocalConfig covering successful, missing, and invalid config scenarios
- Added tests for BuildServerAPIOptions with various option combinations
- Improved test coverage and reliability for configuration loading and option

Signed-off-by: haguru <marc.p.fuller@gmail.com>

--- a/res/config.yaml
+++ b/res/config.yaml
@@ -11,6 +11,6 @@ database:
     database_name: sasukeDB
     timeout: 10s
     mongo_server_options:
-      server_api_version: 1
-      server_api_strict: true
-      server_api_deprecation_errors: true
+      api_version: 1
+      set_strict: true
+      set_deprecation_errors: true
