--- a/.github/workflows/reviewdog.yaml
+++ b/.github/workflows/reviewdog.yaml
@@ -4,7 +4,7 @@ env:
   REVIEWDOG_FAIL_ON_ERROR: 'true'
 jobs:
   reviewdog:
-    name: runner / reviewdog
+    name: Run reviewdog
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
