--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,8 +3,8 @@ on: [pull_request]
 env:
   REVIEWDOG_FAIL_ON_ERROR: 'true'
 jobs:
-  reviewdog:
-    name: runner / reviewdog
+  unit-tests:
+    name: Run unit tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.2.2
