--- a/res/config.yaml
+++ b/res/config.yaml
@@ -13,7 +13,7 @@ database:
       - users
     valid_fields:
       - username
-      - password
+      - hashed_password
     mongo_server_options:
       api_version: 1
       set_strict: true
